src/frontend/snapshots/jjj__frontend__status_line__tests__snapshot_logged_revset.snap
---
source: src/frontend/status_line.rs
expression: terminal.backend()
---
"                                                                         -  lel "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
