src/frontend/snapshots/jjj__frontend__status_line__tests__snapshot_selected_revset_range.snap
---
source: src/frontend/status_line.rs
expression: terminal.backend()
---
"                                                                    foo..bar  - "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
